home/namespaced/pgadmin/deployment.yml
apiVersion: v1
kind: Deployment
metadata:
  name: pgadmin
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    spec:
      containers:
      - name: pgadmin
        image: docker.io/dpage/pgadmin4:8.4
        ports:
        - name: http
          protocol: TCP
          containerPort: 8080
