home/namespaced/pgadmin/service.yml
apiVersion: v1
kind: Service
metadata:
  name: web
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
